[gd_scene load_steps=5 format=1]

[ext_resource path="res://DrawGridLines.gd" type="Script" id=1]
[ext_resource path="res://Figure.tscn" type="PackedScene" id=2]
[ext_resource path="res://Cursor.png" type="Texture" id=3]
[ext_resource path="res://Cursor.gd" type="Script" id=4]

[node name="Game" type="Node2D"]

[node name="TileMap" type="TileMap" parent="."]

mode = 0
tile_set = null
cell/size = Vector2( 64, 64 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray(  )

[node name="ShowGritField" type="Sprite" parent="TileMap"]

script/script = ExtResource( 1 )

[node name="EvilFig" type="Node2D" parent="."]

editor/display_folded = true

[node name="Schwert" parent="EvilFig" instance=ExtResource( 2 )]

editor/display_folded = true
transform/pos = Vector2( 512, 320 )

[node name="Sprite" parent="EvilFig/Schwert"]

modulate = Color( 1, 0.926849, 0.449219, 1 )

[node name="Lanze" parent="EvilFig" instance=ExtResource( 2 )]

visibility/visible = false

[node name="Axt" parent="EvilFig" instance=ExtResource( 2 )]

visibility/visible = false

[node name="GoodFig" type="Node2D" parent="."]

editor/display_folded = true

[node name="Schwert" parent="GoodFig" instance=ExtResource( 2 )]

transform/pos = Vector2( 64, 64 )

[node name="Lanze" parent="GoodFig" instance=ExtResource( 2 )]

visibility/visible = false

[node name="Axt" parent="GoodFig" instance=ExtResource( 2 )]

visibility/visible = false

[node name="Cursor" type="Sprite" parent="."]

transform/pos = Vector2( 32, 32 )
texture = ExtResource( 3 )
script/script = ExtResource( 4 )

[node name="Menu" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 704.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 576.0

[node name="menuList" type="ItemList" parent="Menu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 320.0
margin/bottom = 576.0


[editable path="EvilFig/Schwert"]
